<resources>
    <string name="app_name">悦动</string>

    <string name="title_activity_social_util">我的悦动</string>
    <string name="title_activity_user_profile">用户信息</string>
    <string name="title_activity_science_info">说明</string>

    <string name="action_settings">设置</string>

    <string name="welcome_fg">欢迎使用悦动！</string>
    <string name="b2_ncf">未连接</string>
    <string name="b2_connect_ok">已连接</string>
    <string name="b2_error">状态异常</string>
    <string name="b2_not_get_data">获取数据失败</string>

    <string name="b2_status_0">未知</string>
    <string name="b2_status_1">正在连接</string>
    <string name="b2_status_2">已连接</string>
    <string name="b2_status_3">已断开连接</string>
    <string name="b2_status_5">已断开连接</string>
    <string name="b2_status_default">已断开连接</string>
    <string name="b2_unknown">未知</string>

    <string name="b2_status_err_100100">没有安装华为健康App</string>
    <string name="b2_status_err_100101">设备不支持</string>
    <string name="b2_status_err_100104">手环服务异常</string>
    <string name="b2_status_err_100105">手环服务初始化失败</string>
    <string name="b2_status_err_100106">已断开连接</string>

    <string name="b2_not_connected_st">当前设备未连接至运动手环，请检查设备是否已开启，并且蓝牙状态良好。使用手环功能时需打开华为智能设备客户端。</string>
    <string name="b2_connecting">正在连接手环，请稍后…</string>
    <string name="b2_connected_ok_st">手环已正常连接</string>

    <string name="temp_bottom_info">数值将根据您的环境和设备的物理接触变化。</string>
    <string name="advice_bottom_info">本建议仅供参考，详细健康与运动建议请咨询医生。</string>

    <string name="advice_level_1">您的运动习惯非常好，请继续保持。</string>
    <string name="advice_level_2">您的运动习惯较好，每天可以做一些适度的锻炼~（建议：8000步）</string>
    <string name="advice_level_3">您的运动量貌似有点少诶~没事的时候可以多运动运动，哪怕是出去散一下步也很好哦~（建议：6500步）</string>
    <string name="advice_level_f">您的运动有些过量，请稍微减少一下运动量。诚然，适量的运动对我们的健康非常有益，但是过量的运动也会危害健康。（建议：8000步-12000步）</string>
    <string name="advice_level_fjc">亲，一定要坚持不懈哟~要尽量完成定下的目标哦~</string>
    <string name="advice_info_p1">根据您目前的运动情况</string>

    <string name="choose_function_inst">运动与健康功能</string>
    <string name="b2_btn_fn_user_info">用户信息</string>
    <string name="b2_btn_fn_motion_everyday">每日运动</string>
    <string name="b2_btn_fn_motion_data">计步统计</string>
    <string name="b2_btn_fn_motion_goal">运动目标</string>
    <string name="b2_btn_fn_sleep">睡眠监测</string>
    <string name="b2_btn_alarm">手环闹钟</string>
    <string name="b2_btn_fn_advice">运动建议</string>
    <string name="btn_fn_temperature">温度/湿度</string>
    <string name="btn_fn_weight">体重记录</string>

    <string name="login">登录</string>
    <string name="hint_username">输入账号/邮箱</string>
    <string name="hint_password">密码</string>
    <string name="tip_please_input_username">请输入用户名</string>
    <string name="tip_illegal_email">请输入正确的Email地址</string>
    <string name="tip_please_input_password">请输入密码</string>
    <string name="progress_login">正在登录…</string>
    <string name="tip_login_error_for_network">对不起,无法登录</string>
    <string name="tip_no_internet">当前没有可用的网络连接</string>

    <!-- Error View -->
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="tip_temperature_sensor_error">您的设备没有可用的传感器</string>
    <string name="tip_device_no_conn_warning">未连接至手环，请检查连接</string>
    <string name="no_device_data">获取数据失败，请稍后重试</string>
    <string name="no_b2_now_local">无法从手环中获取数据，使用本地数据</string>
    <string name="fucking_unknown_error">状态异常，请稍后再试</string>

    <string name="unlogin">未登录，请先登录</string>
    <string name="unlogin_tip">您还未登录\r\n或网络延迟</string>
    <string name="my_information_unlogin_tips">未登录</string>


    <string name="loading">加载中…</string>
    <string name="loading_no_more">已加载全部</string>
    <string name="saving_data">正在保存数据…</string>
    <string name="sending_reply_to_server">正在提交请求…</string>
    <string name="sync_data">正在向设备同步数据…</string>

    <string name="loading_img">加载图片</string>
    <string name="mes_notice">消息通知</string>
    <string name="clean_cache">清理缓存</string>
    <string name="double_click_exit">双击退出</string>
    <string name="loading_more">自动加载\"更多\"</string>
    <string name="update">检查新版本</string>
    <string name="about">关于悦动</string>
    <string name="feedback">意见反馈</string>
    <string name="exit">退出</string>
    <string name="grade">去评分</string>

    <string name="gosite">App官网</string>
    <string name="knowmore">了解更多</string>
    <string name="app_author">作者：sczyh30</string>
    <string name="copyright">Copyright © 悦动 2015 - 2016.</string>

    <string name="qr_code_tip">扫一扫上面的二维码，加我为好友</string>
    <string name="qr_code_tip2">(长按保存到本地)</string>

    <string name="notice_accept">接收新通知</string>
    <string name="health_notice_accept">开启智能运动提醒</string>
    <string name="notice_voice">声音</string>
    <string name="notice_vibration">震动</string>
    <string name="notice_app_exit">退出后不提醒</string>

    <string name="btn_str_logout">注销账号</string>
    <string name="set_device_user_info">更改手环用户信息</string>
    <string name="tip_logout_success">注销成功</string>

    <string name="actionbar_title_profile">个人中心</string>
    <string name="favorite">收藏</string>
    <string name="following">关注</string>
    <string name="follower">粉丝</string>
    <string name="join_time">注册时间: </string>
    <string name="location">所在地区: </string>
    <string name="favourite_sport">爱好的运动: </string>
    <string name="gxqm">个性签名: </string>
    <string name="birthday">生日</string>
    <string name="walk_step_length">行走步长</string>
    <string name="age">年龄</string>
    <string name="user_height">身高</string>
    <string name="user_weight">体重</string>
    <string name="run_step_length">跑步步长</string>
    <string name="gender">性别</string>
    <string name="today_total_calorie">今日消耗卡路里量</string>

    <string name="activi">活动</string>
    <string name="information">资料</string>
    <string name="qrcode">二维码</string>
    <string name="message">消息</string>
    <string name="health">健康状况</string>
    <string name="bookmarks">收藏夹</string>
    <string name="user_score">积分</string>
    <string name="refresh_b2_status">刷新手环状态</string>


    <string name="warning_title_0001_error">出错啦！</string>
    <string name="warning_body_0001_error">信息暂时无法获取，请稍候再试。</string>
    <string name="warning_title_no_data_error">哎呦喂！</string>
    <string name="warning_body_no_data_error">没有从手环中获取到任何数据哦~</string>

    <string name="error_WJ3001">状态异常，请重试。(WJ3001)</string>
    <string name="error_WJ3002">状态异常，请重试。(WJ3002)</string>
    <string name="error_WP0014">提交请求失败，请重试。（WP0014）</string>
    <string name="error_RDI006">同步数据时出现异常，请重试。（RDI006）</string>

    <string name="actionbar_title_setting">设置</string>
    <string name="actionbar_title_setting_notification">新消息提醒</string>
    <string name="actionbar_title_about">关于</string>
    <string name="actionbar_title_my_information">我的悦动</string>
    <string name="actionbar_title_my_information_detail">详细信息</string>
    <string name="actionbar_title_temperature_detail">温度/湿度</string>
    <string name="actionbar_title_device_user_info">手环用户信息</string>
    <string name="actionbar_title_device_alarm">手环闹钟</string>
    <string name="actionbar_title_device_alarm_set">手环闹钟设定</string>
    <string name="actionbar_title_device_everyday_motion">每日运动</string>
    <string name="actionbar_title_device_motion_data">我的运动数据</string>
    <string name="actionbar_title_motion_advice">健康与运动建议</string>
    <string name="actionbar_title_device_motion_goal">我的运动目标</string>
    <string name="actionbar_title_device_motion_goal_set">设定运动目标</string>
    <string name="actionbar_title_device_sleep_observer">睡眠监测</string>
    <string name="actionbar_title_motion_activities_detail">约动起来</string>
    <string name="actionbar_title_message">我的信息</string>

    <string-array name="weeks">
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
        <item>周日</item>
        <item>周一至周五（工作日）</item>
    </string-array>

    <string name="detail_information">详细信息</string>
    <string name="bmi">体重指数</string>
    <string name="bmi_about">关于 BMI</string>
    <string name="bmi_intro_01">BMI指数（即身体质量指数，简称体质指数又称体重，英文为Body Mass Index，简称BMI），是用体重公斤数除以身高米数平方得出的数字，是目前国际上常用的衡量人体胖瘦程度以及是否健康的一个标准。主要用于统计用途，当我们需要比较及分析一个人的体重对于不同高度的人所带来的健康影响时，BMI值是一个中立而可靠的指标。</string>
    <string name="bmi_equation">体质指数（BMI）= 体重（kg）÷ 身高²（m²）</string>
    <string name="bmi_intro_02">成人的BMI数值参考：</string>
    <string name="bmi_intro_table">重量不足：低于18.5\n正常范围：18.5–25.0\n超重：≥25.0\n肥胖：≥30.0</string>
    <string name="bmi_intro_mz">由于存在误差，所以BMI只能作为评估个人体重和健康状况的多项标准之一。App提供的BMI值仅供参考，不得用于医疗诊断与医疗评估。详情请咨询医疗专业人士。</string>
    <string name="height">身高</string>

    <string name="weight_goal_intro">设置一个目标体重以便于您的锻炼以及体重的管理。目标将会表现于折线图中。</string>
    <string name="weight_goal_not_set">未设定</string>
    <string name="weight_insert_manual">手动记录</string>
    <string name="weight_insert_record_ok">添加体重记录成功</string>
    <string name="weight_sync_goal_ok">同步体重目标成功</string>
    <string name="weight_set_goal">体重目标</string>
    <string name="weight_save_goal">保存体重目标</string>

    <string name="title_activity_weight_record">记录体重</string>
    <string name="title_activity_weight_goal">体重目标</string>
    <string name="title_activity_message">我的信息</string>
    <string name="title_activity_motion_goal">运动目标</string>
    <string name="title_activity_motion_data">计步统计</string>
    <string name="title_activity_sleep">睡眠监测</string>

    <string name="set_goal_intro">设置各项运动目标以便APP可以为您的运动提供更好的建议。</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
