<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.m1racle.yuedong.ui.activity.ScienceInfoActivity">
    <com.m1racle.yuedong.ui.widget.CustomerScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/main_green"
                android:text="@string/bmi_about"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/space_15"
                android:textColor="@color/black"
                android:text="@string/bmi_intro_01"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/space_20"
                android:textSize="15sp"
                android:textColor="@color/main_green"
                android:text="@string/bmi_equation"/>

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/space_20"
            android:textColor="@color/black"
            android:text="@string/bmi_intro_02"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size_16"
                android:paddingTop="@dimen/space_20"
                android:text="@string/bmi_intro_table"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/space_20"
                android:textColor="@color/black"
                android:text="@string/bmi_intro_mz"/>



        </LinearLayout>


    </com.m1racle.yuedong.ui.widget.CustomerScrollView>

</RelativeLayout>

