<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.MainSelectFragment">

    <com.m1racle.yuedong.ui.widget.CustomerScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_function_inst"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/text_size_20"
                android:gravity="center"
                android:layout_marginLeft="@dimen/space_10"
                android:layout_marginStart="@dimen/space_10"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:layout_marginTop="@dimen/space_10">
                <Button
                    android:layout_width="@dimen/space_110"
                    android:layout_height="@dimen/space_100"
                    android:text="@string/b2_btn_fn_user_info"
                    android:id="@+id/fn_button_userinfo"
                    android:layout_marginLeft="@dimen/space_5"
                    android:layout_marginStart="@dimen/space_5"
                    android:layout_marginTop="@dimen/space_10"
                    android:background="@drawable/btn_red"
                    android:textSize="@dimen/text_size_15"
                    android:layout_gravity="left|top" />

                <Button
                    android:layout_width="@dimen/space_110"
                    android:layout_height="@dimen/space_100"
                    android:layout_marginTop="@dimen/space_10"
                    android:layout_marginStart="@dimen/space_10"
                    android:layout_marginLeft="@dimen/space_10"
                    android:text="@string/b2_btn_fn_motion_everyday"
                    android:id="@+id/fn_button_mt_everyday"
                    android:textSize="@dimen/text_size_15"
                    android:background="@drawable/btn_green_selector"/>


                <Button
                    android:layout_width="@dimen/space_110"
                    android:layout_height="@dimen/space_100"
                    android:text="@string/b2_btn_fn_motion_data"
                    android:id="@+id/fn_button_mt_data"
                    android:textSize="@dimen/text_size_15"
                    android:background="@drawable/btn_blue_selector"
                    android:layout_marginTop="@dimen/space_10"
                    android:layout_marginStart="@dimen/space_10"
                    android:layout_marginLeft="@dimen/space_10"
                    android:layout_marginRight="@dimen/space_5"
                    android:layout_marginEnd="@dimen/space_5"
                    android:layout_gravity="right|top" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:layout_marginTop="@dimen/space_5">
                <Button
                    android:layout_width="@dimen/space_110"
                    android:layout_height="@dimen/space_100"
                    android:text="@string/b2_btn_fn_motion_goal"
                    android:id="@+id/fn_button_mt_goal"
                    android:textSize="@dimen/text_size_15"
                    android:layout_marginLeft="@dimen/space_5"
                    android:layout_marginStart="@dimen/space_5"
                    android:layout_marginTop="@dimen/space_10"
                    android:background="@drawable/btn_blue_selector"
                    android:layout_gravity="left|top" />

                <Button
                    android:layout_width="@dimen/space_110"
                    android:layout_height="@dimen/space_100"
                    android:layout_marginTop="@dimen/space_10"
                    android:layout_marginStart="@dimen/space_10"
                    android:layout_marginLeft="@dimen/space_10"
                    android:text="@string/b2_btn_fn_sleep"
                    android:id="@+id/fn_button_sleep"
                    android:textSize="@dimen/text_size_15"
                    android:background="@drawable/btn_red" />

                <Button
                    android:layout_width="@dimen/space_110"
                    android:layout_height="@dimen/space_100"
                    android:text="@string/b2_btn_alarm"
                    android:id="@+id/fn_button_alarm"
                    android:textSize="@dimen/text_size_15"
                    android:background="@drawable/btn_green_selector"
                    android:layout_marginTop="@dimen/space_10"
                    android:layout_marginStart="@dimen/space_10"
                    android:layout_marginLeft="@dimen/space_10"
                    android:layout_marginRight="@dimen/space_5"
                    android:layout_marginEnd="@dimen/space_5"
                    android:layout_gravity="right|top" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:layout_marginTop="@dimen/space_5">
                <Button
                    android:layout_width="@dimen/space_110"
                    android:layout_height="@dimen/space_100"
                    android:text="@string/b2_btn_fn_advice"
                    android:id="@+id/fn_button_advice"
                    android:textSize="@dimen/text_size_15"
                    android:layout_marginLeft="@dimen/space_5"
                    android:layout_marginStart="@dimen/space_5"
                    android:layout_marginTop="@dimen/space_10"
                    android:background="@drawable/btn_green_selector"
                    android:layout_gravity="left|top" />

                <Button
                    android:layout_width="@dimen/space_110"
                    android:layout_height="@dimen/space_100"
                    android:layout_marginTop="@dimen/space_10"
                    android:layout_marginStart="@dimen/space_10"
                    android:layout_marginLeft="@dimen/space_10"
                    android:text="@string/btn_fn_temperature"
                    android:id="@+id/fn_button_temperature"
                    android:textSize="@dimen/text_size_15"
                    android:background="@drawable/btn_blue_selector"/>

                <Button
                    android:layout_width="@dimen/space_110"
                    android:layout_height="@dimen/space_100"
                    android:text="@string/btn_fn_weight"
                    android:id="@+id/fn_button_weight"
                    android:textSize="@dimen/text_size_15"
                    android:background="@drawable/btn_red"
                    android:layout_marginTop="@dimen/space_10"
                    android:layout_marginStart="@dimen/space_10"
                    android:layout_marginLeft="@dimen/space_10"
                    android:layout_marginRight="@dimen/space_5"
                    android:layout_marginEnd="@dimen/space_5"
                    android:layout_gravity="right|top" />
            </LinearLayout>
        </LinearLayout>
    </com.m1racle.yuedong.ui.widget.CustomerScrollView>

</FrameLayout>
